# cookiecutter

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  setup.cfg  setup.py
.github/workflows/: build-test.yaml
hooks/: post_gen_project.py
tests/: conftest.py  test_default_proj_generate.py
{{cookiecutter.project_slug}}/: Makefile  README.md  mkdocs.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: build-test.yaml
{{cookiecutter.project_slug}}/docker/: Dockerfile
{{cookiecutter.project_slug}}/docker/ci/: docker-compose.yaml
{{cookiecutter.project_slug}}/docs/: index.md  usage.md
{{cookiecutter.project_slug}}/requirements/: all.txt
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  logger.py
{{cookiecutter.project_slug}}/tests/: test_version.py
